--- a/p-details.html
+++ b/p-details.html
@@ -1,8 +1,11 @@
 
-   
-   <link rel="stylesheet" href="p-details.css">
+  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="p-details.css">
 
 
+
+<div class="main">
     <!-- tabs -->
     <ul class="nav nav-tabs" id="productTabs" role="tablist">
         <li class="nav-item">
@@ -36,8 +39,8 @@
                 </p>
 
                 <div class="double-images">
-                    <img src="images/Image.png" alt="1">
-                    <img src="images/Image (1).png" alt=" 2">
+                    <img src="Image.png" alt="1">
+                    <img src="Image (1).png" alt=" 2">
                 </div>
 
                 <h4>لحظات لا تنسى</h4>
@@ -53,7 +56,7 @@
                     ميزات رائعة وظلال ولون بشرة طبيعية. التقط صور سيلفي رائعة مع كاميرا ترو ديبث بدقة تبلغ 12 ميجابكسل.
                     مع خاصية مثبت الصور البصري، لن يكون التقاط صور واضحة مشكلة بعد الآن. </p>
 
-                <img src="images/Image (2).png" alt=" 3">
+                <img src="Image (2).png" alt=" 3">
 
                 <p>
                     يضيف هاتف ايفون 11 الذكي سرعة فائقة إلى كل ما تفعله، من خلال شريحة ايه 12 بيونيك التي تتميز بمحرك
@@ -63,7 +66,7 @@
                 </p>
 
                 <h4>أداء سلس</h4>
-                <img class="image-right" src="images/Image (3).png" alt=" 4">
+                <img class="image-right" src="Image (3).png"  alt=" 4">
 
                 <p>
                     يتميز هذا الهاتف الذكي من ابل بشاشة ليكويد رتينا يبلغ حجمها 6.1 انش تعمل بتقنية اتش دي وتوفر صورًا
@@ -125,10 +128,25 @@
         </div>
 
         <!--  -->
-        <div class="tab-pane fade" id="reviews" role="tabpanel">
-
+     <div class="tab-pane fade" id="reviews" role="tabpanel">
+  <div class="container py-4">
+    <div class="row">
+      <div class="col-lg-4 mb-4 side">
+    
+      </div>
+      <div class="col-lg-8 ">
+        <h5 class="mb-4 ">تعليقات المستخدمين</h5>
+<div class="reviews"></div>
+        <div class="text-center mt-4">
+          <button class="btn btn-outline-secondary w-100 more ">عرض المزيد</button>
         </div>
+      </div>
     </div>
+  </div>
+</div>
 
-
+    </div>
+<script src="p-details.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</div>
 
