--- a/p-details.html
+++ b/p-details.html
@@ -39,8 +39,8 @@
                 </p>
 
                 <div class="double-images">
-                    <img src="Image.png" alt="1">
-                    <img src="Image (1).png" alt=" 2">
+                    <img src="images/Image.png" alt="1">
+                    <img src="images/Image (1).png" alt=" 2">
                 </div>
 
                 <h4>لحظات لا تنسى</h4>
@@ -56,7 +56,7 @@
                     ميزات رائعة وظلال ولون بشرة طبيعية. التقط صور سيلفي رائعة مع كاميرا ترو ديبث بدقة تبلغ 12 ميجابكسل.
                     مع خاصية مثبت الصور البصري، لن يكون التقاط صور واضحة مشكلة بعد الآن. </p>
 
-                <img src="Image (2).png" alt=" 3">
+                <img src="images/Image (2).png" alt=" 3">
 
                 <p>
                     يضيف هاتف ايفون 11 الذكي سرعة فائقة إلى كل ما تفعله، من خلال شريحة ايه 12 بيونيك التي تتميز بمحرك
@@ -66,7 +66,7 @@
                 </p>
 
                 <h4>أداء سلس</h4>
-                <img class="image-right" src="Image (3).png"  alt=" 4">
+                <img class="image-right" src="images/Image (3).png"  alt=" 4">
 
                 <p>
                     يتميز هذا الهاتف الذكي من ابل بشاشة ليكويد رتينا يبلغ حجمها 6.1 انش تعمل بتقنية اتش دي وتوفر صورًا
