--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Oswald:wght@200..700&family=Yeseva+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./productDetails/ProductDetails.css">
@@ -211,6 +214,7 @@
           <div class="row gy-1">
             <div class="col-md-3">
               <h4>عن متجرنا</h4>
+              <button onclick=" renderDetails()">gooooooooo</button>
               <p>
                 متجر سلة من افضل المتاجر التى تقوم ببيع المنتجات الرقمية بأفضل
                 الاسعار وماركات عالمية تسوق الان واطلع على المزيد من التصاميم
