--- a/productDetails/ProductDetails.html
+++ b/productDetails/ProductDetails.html
@@ -1,5 +1,5 @@
 
-<div id="details">
+<div id="details" class="pt-3">
 
     <div class="first-section">
         <div class="container">
@@ -19,14 +19,14 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="details-item">
+                        <div class="details-item pt-4 pb-3">
                             <img src="../productDetails/images/36164304fa72e581641128c912c4aaf12accf221.png" alt="" class="w-90">
                             <p> سنقسط الدفع لمشترياتك علي أربع أقساط بدون تكلفة</p>
                             <span>أعرف أكثر</span>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="details-item">
+                        <div class="details-item pb-md-3">
                             <img src="../productDetails/images/39687915d4586f42581fab42ec58bdc55a3cc03c.png" alt="" class="w-90">
                             <p> ادفع 586 ر.س فقط علي 3 دفعات بدون رسوم</p>
                             <span>أعرف أكثر</span>
