--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Oswald:wght@200..700&family=Yeseva+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/all.min.css">
-    <link rel="stylesheet" href="./productDetails/ProductDetails.css">
-    <link rel="stylesheet" href="./css/css.css">
-    <link rel="stylesheet" href="Cart/cart.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Oswald:wght@200..700&family=Yeseva+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/all.min.css" />
+    <link rel="stylesheet" href="./productDetails/ProductDetails.css" />
+    <link rel="stylesheet" href="./css/css.css" />
+    <link rel="stylesheet" href="Cart/cart.css" />
     <link rel="stylesheet" href="./productDetails/p-details.css" />
     <link rel="stylesheet" href="./css/css.css" />
     <link rel="stylesheet" href="./project/css/project.css" />
-    <link rel="icon" href="imgs/logo.png">
+    <link rel="icon" href="imgs/logo.png" />
     <title>منصة سلة</title>
   </head>
   <body>
@@ -143,7 +146,12 @@
         <div class="lastNav bg-black">
           <div class="container text-white p-2">
             <div class="row d-none d-lg-flex">
-              <div class="col-lg-1">كل المنتجات</div>
+              <a
+                href="Products/Product.html"
+                class="col-lg-1"
+                onclick="renderProduct()"
+                >كل المنتجات</a
+              >
               <div class="col-lg-1">الكترونيات</div>
               <div class="col-lg-1">موبيلات</div>
               <div class="col-lg-1 p-0">كاميرات مراقبة</div>
